[project]
name = "trip-planner-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "airportsdata>=20260315",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.139.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.8",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.9.8",
    "mcp>=1.28.1",
    "nest-asyncio>=1.6.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pycountry>=26.2.16",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tavily>=1.1.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.51.0",
]
